syntax = "proto3";
package cdm;
option java_package = "com.kitware.physiology.cdm";
option optimize_for = SPEED;

message eEnvironment 
{
  enum SurroundingType
  {
    NullSurrounding = 0;
    Air             = 1;
    Water           = 2;
  }
}
