syntax = "proto3";
package cdm;
option java_package = "com.kitware.physiology.cdm";
option optimize_for = SPEED;

message eSubstance
{
  enum State
  {
    NullState          = 0;
    Solid              = 1;
    Liquid             = 2;
    Gas                = 3;
    Molecular          = 4;
  }

  /** @brief Ionic state. */
  enum IonicState
  {
    NullIonicState     = 0;
    Acid               = 1;
    Base               = 2;
    Neutral            = 3;
    WeakBase           = 4;
  }

  /** @brief Binding protien type. */
  enum BindingProtein
  {
    NullBindingProtein = 0;
    AAG                = 1;
    Albumin            = 2;
    Lipoprotein        = 3;
  }
}

